# make_magpie_rosbags

./: CMakeLists.txt  README.md  package.xml
launch/: live_test.launch
src/: make_magpie_rosbag_node.cpp
